Improve `resume.markdown`, `site-logo.png`, `favicon.png`

--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ kramdown:
 custom_plaintext_title: Permanent head Damage
 custom_author: Stanislav Kovalenko
 custom_author_email: public.skovalenko@gmail.com
-custom_linkedin: https://www.linkedin.com
+custom_linkedin: https://www.linkedin.com/in/stan1slav-kovalenko/
 custom_github: https://github.com/Yo1k
 custom_feed_id_year: 2022
 custom_feed_id_authority_name: kovalenko.place
